# haeslerVisualization

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  install.bat  pyproject.toml
OE/Source/: DisplayBuffer.cpp  DisplayBuffer.h  LfpDisplay.cpp  LfpDisplay.h  LfpDisplayCanvas.cpp  LfpDisplayNode.cpp  LfpDisplayOptions.cpp  OpenEphysLib.cpp
Source/: DisplayBuffer.cpp  LfpDisplayOptions.cpp  OpenEphysLib.cpp
pythonOE/: controller.py  data_stream.py  event_plotting.py  model.py  timeseries_plotting.py
pythonOE/templates/: index.html
src/: controller.py  event_plotting.py  model.py  timeseries_plotting.py
