[project]
name = "haeslervisualization"
version = "0.1.0"
description = "Visualization web app for data acquired through Open-Ephys"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.8.0",
    "holoviews>=1.21.0",
    "open-ephys-python-tools>=1.0.0",
    "panel>=1.8.2",
    "pyzmq>=27.1.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
]

[project.scripts]
serve-events = "panel.__main__:main"