[project]
name = "haeslervisualization"
version = "0.1.0"
description = "Visualization web app for data acquired through Open-Ephys"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh",
    "holoviews",
    "open-ephys-python-tools",
    "panel==1.7.2",
    "pyzmq",
    "scikit-learn",
    "scipy",
]

[tool.uv]
package = true


[project.scripts]
neurolayer_gui = "event_plotting:main"